[백엔드] 이미지 삭제 기능 및 보안 강화